# servalcat

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.md  commit.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test_with_gemmi.yml  wheels2.yml
docs/: commands.rst  conf.py  hydrogen.rst  index.rst  occ_refine.rst  overview.rst  refmac_keywords.rst  source.rst  spa.rst  xtal.rst
docs/help/: fofc.txt  refine_spa.txt  trim.txt
docs/spa_examples/: ab42.rst  chrmine.rst  index.rst  omitmap.rst
scripts/: metal_to_json.py  refine_xtal_true_phase.py  test_fc_with_refmac.py  test_fw.py
servalcat/: __init__.py  __main__.py  command_line.py
servalcat/refine/: cgsolve.py  refine.py  refine_geom.py  refine_spa.py  refine_xtal.py  spa.py  xtal.py
servalcat/refmac/: exte.py  refmac_keywords.py  refmac_wrapper.py
servalcat/spa/: fofc.py  fsc.py  localcc.py  realspcc_from_var.py  run_refmac.py  sfcalc.py  shift_maps.py  shiftback.py  translate.py
servalcat/utils/: __init__.py  commands.py  fileio.py  generate_operators.py  hkl.py  keywords.py  logger.py  maps.py  model.py  refmac.py  restraints.py  show.py  symmetry.py
servalcat/xtal/: french_wilson.py  fw_helper.cpp  refmac_wrapper.py  run_refmac_small.py  sigmaa.py  twin.py
src/: amplitude.cpp  array.h  ext.cpp  intensity.cpp  lambertw.hpp  math.hpp  refine.cpp  twin.cpp
src/refine/: cgsolve.hpp  geom.hpp  ll.hpp  ncsr.hpp  params.hpp
tests/: .gitignore  test_for_ci.py  test_misc.py  test_refine.py  test_spa.py  test_xtal.py
tests/6mw0/: 6mw0.cif
tests/biotin/: biotin_talos.cif  biotin_talos.hkl  biotin_talos.ins  biotin_talos.mtz
tests/dict/: acedrg_link_4D4-MS6.cif  acedrg_link_MS6-GLY.cif
