[build-system]
requires = ["scikit-build-core~=0.9.0", "pybind11>=2.6.2",
            "gemmi @ git+https://github.com/project-gemmi/gemmi.git@v0.6.6",
]
build-backend = "scikit_build_core.build"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "servalcat"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ['packaging', 'numpy>=1.15', 'scipy', 'pandas>=1.1.0', 'gemmi==0.6.6']
description="Structure refinement and validation for crystallography and single particle analysis"
readme = "README.md"
authors = [
  { name = "Keitaro Yamashita", email = "" },
  { name = "Garib N. Murshudov", email = "" },
]
urls.repository = "https://github.com/keitaroyam/servalcat"
license = {text = "MPL-2.0"}

[project.scripts]
servalcat = "servalcat.__main__:main"
refmacat  = "servalcat.refmac.refmac_wrapper:command_line"

[tool.scikit-build]
#build-dir = "/tmp/gemmi_build2/{wheel_tag}"
wheel.expand-macos-universal-tags = true  # not sure if this is useful
cmake.build-type = "Release"
cmake.verbose = true
sdist.include = ["eigen/Eigen", "eigen/README.md", "eigen/COPYING*"]
sdist.exclude = [".*", "eigen/", "scripts/"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "servalcat/__init__.py"

[tool.cibuildwheel]
# increase pip debugging output
build-verbosity = 2
test-command = "python {project}/tests/test_for_ci.py"
[tool.cibuildwheel.environment]
SKBUILD_CMAKE_ARGS = '-DBUILD_SHARED_LIBS=OFF;-DINSTALL_DEV_FILES=ON;-DGENERATE_STUBS=OFF'

[tool.codespell]
skip = './eigen,./gemmi,*.pdb,*.crd,*.cif,*.mmcif,*.ent,*.log*,*.dic,tags,*.bak,*build*,*~'
# codespell apparently requires that the words here are lowercase
ignore-words-list = 'fo,fom,dum,varn,readd,alph,valu,chec,buil'

